<resources>

    <string name="register_done_hint">完成</string>
    <string name="register_female_hint">女士</string>
    <string name="register_man_hint">男士</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="login_register_hint">注册</string>
    <string name="login_input_username_hint">用户名</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码？</string>
    <string name="login_other_hint">其他方式登录</string>
    <string name="register_input_username_hint">手机号</string>
    <string name="register_sms_auth_code">短信验证码</string>
    <string name="register_sms_hint">获取验证码</string>
    <string name="loading">请稍候</string>

    <string name="error_operation_failed">操作失败：</string>
    <string name="error_unable_load_servers">无法载入服务器列表，尝试清除应用数据可能有助于解决此问题：</string>
    <string name="error_invalid_number_less_or_equal">数字不合法，应小于或等于 %d</string>
    <string name="error_invalid_number_more_or_equal">数字不合法，应大于或等于 %d</string>
    <!-- Strings related to Server List -->
    <string name="app_name">Project Walk</string>
    <string name="title_main">Rcon 服务器列表</string>
    <string name="no_server">未添加任何 MineCraft 服务器</string>
    <string name="action_settings">设置</string>
    <string name="action_duplicate">制作副本</string>
    <string name="action_share">分享</string>
    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_ok">确认</string>
    <string name="action_cancel">取消</string>
    <string name="action_refresh">刷新</string>
    <string name="server_name_default_text">服务器</string>
    <!-- Strings related to Add Server -->
    <string name="title_activity_add_server">添加或修改 Rcon 服务器</string>
    <string name="text_add_server_edit_mode">编辑模式 / 正在编辑服务器：</string>
    <string name="prompt_name">服务器名称 (任意命名)</string>
    <string name="prompt_host">服务器地址</string>
    <string name="prompt_port">Rcon 端口 [通常为 25575 或 27015]</string>
    <string name="prompt_password">Rcon 密码 (可选)</string>
    <string name="prompt_invalid_port">端口号不合法 (应介于 1~65535)</string>
    <string name="action_add_server">保存服务器</string>
    <string name="action_test_server">测试连接</string>
    <string name="confirm_server_delete">你确定要删除 %s 吗？</string>
    <string name="prompt_deleted">已删除 %s</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_address_default_text">主机:端口</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_invalid_sid">无效服务器 SID:</string>
    <string name="success_edit">编辑 %s 成功</string>
    <string name="success_add">添加 %s 成功</string>
    <string name="name_duplicated">" - 副本"</string>
    <string name="success_duplicated">成功制作 %s 的副本</string>
    <string name="text_share_server">Rcon 服务器信息\n名称：%s\n地址：%s\n端口号：%d\n密码：%s\n%s</string>
    <string name="prompt_share_server">分享服务器信息 （注意：Rcon 服务器密码也会被分享）</string>
    <string name="prompt_command">命令</string>
    <string name="action_run">运行</string>
    <string name="action_command_history">命令历史</string>
    <string name="action_quick_command">快速命令</string>
    <string name="action_prev">上一个</string>
    <string name="action_next">下一个</string>
    <string name="action_connection_info">连接信息</string>
    <string name="action_clean_command_area">清空命令结果</string>
    <string name="action_exit">退出</string>
    <string name="action_clean_history">清空命令历史</string>
    <string name="action_back">返回</string>
    <string name="prompt_connectied_to">已连接</string>
    <string name="prompt_connecting">正在连接到 %s\n%s</string>
    <string name="prompt_connection_failed">连接 %s 失败\n\n%s</string>
    <string name="command_result_area">COMMAND RESULT AREA</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_about">关于</string>
    <string name="title_terminal">终端</string>
    <string name="title_command_prompt">命令提示符</string>
    <string name="title_auto_start">自动连接 rcon:// 服务器</string>
    <string name="desc_auto_start">当点击 rcon:// 链接时，自动连接并显示终端</string>
    <string name="desc_command_prompt">显示在终端的命令提示符</string>
    <string name="title_connection">Rcon 服务器连接</string>
    <string name="title_terminal_text_size">终端字体大小</string>
    <string name="title_unnamed">未命名</string>
    <string name="prompt_connection_info">名称: %s\n主机: %s\n端口: %d</string>
    <string name="title_connection_info">连接信息</string>

    <string name="app_version" translatable="false">Ver.1.0</string>
    <string name="navigation_drawer_open">打开菜单栏</string>
    <string name="navigation_drawer_close">关闭菜单栏</string>
    <string name="nav_header_desc">导航栏头部</string>
    <string name="nav_server_list">服务器列表</string>
    <string name="nav_quick_commands">快捷命令</string>
    <string name="nav_settings">设置</string>
    <string name="title_application">应用和偏好</string>
    <string name="quick_command_name">快捷命令名称</string>
    <string name="quick_command_value">命令内容</string>
    <string name="action_save">保存</string>
    <string name="prompt_value">值</string>
    <string name="text_quick_command_edit_mode">编辑模式 / 正在编辑快捷命令：</string>
    <string name="action_open">打开</string>
    <string name="action_close">关闭</string>
    <string name="title_add_quick_command">添加或修改快捷命令</string>
    <string name="title_quick_command">快捷命令列表</string>
    <string name="prompt_confirm_disconnect">退出并结束会话 / 在后台运行?</string>
    <string name="action_disconnect">退出并结束会话</string>
    <string name="action_run_in_background">后台运行</string>
    <string name="error_invalid_port">端口号非法</string>
    <string name="title_view_github">查看 Github 项目主页</string>
    <string name="summary_license">开源协议：GPLv3</string>
    <string name="title_author">作者：Kenvix</string>
    <string name="summary_author_blog">查看作者博客 (kenvix.com)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walk_sensor_not_found">此设备缺少所需的步数传感器，因此无法使用此应用</string>
    <string name="sensor_failed">无法启动所需的传感器</string>
    <string name="walk_count">步数</string>
    <string name="required_permission_denied">此功能必须获得以下权限，请允许或打开设置手动授予。若取消，则此功能将不能使用: \n%s</string>
    <string name="prompt_no_response">若长时间没有响应，请返回并重试</string>
    <string name="prompt_waiting_camera">正在等待相机拍照</string>
    <string name="prompt_waiting_file">正在等待文件选取</string>
    <string name="prompt_camera_output">Camera Output</string>
    <string name="title_forum">社区</string>
    <string name="title_me">我</string>
    <string name="title_start_recognition">开始识别</string>
    <string name="prompt_back_again">再按一次返回键退出程序</string>
    <string name="title_my_favorite">我的收藏</string>
    <string name="prompt_wrong_auth">用户名或密码错误</string>
    <string name="title_recognize_result">识别结果</string>
</resources>
