<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_navigation_index"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="首页" />

    <item
        android:id="@+id/main_navigation_forum"
        android:icon="@drawable/ic_discuss"
        android:title="@string/title_forum" />

    <item
        android:id="@+id/main_navigation_recognition"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_start_recognition" />

    <item
        android:id="@+id/main_navigation_exercise"
        android:icon="@drawable/ic_tag"
        android:title="健身" />

    <item
        android:id="@+id/main_navigation_me"
        android:icon="@drawable/ic_user_2"
        android:title="@string/title_me" />
</menu>
