<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_register_one_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/ly_retrieve_bar"
        layout="@layout/login_navigation_bar" />


    <LinearLayout
        android:id="@+id/ll_register_phone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_username_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_singup_mobile"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="#dededf" />

        <EditText
            android:id="@+id/et_register_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_input_username_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#c9c9c9"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <ImageView
            android:id="@+id/iv_register_username_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register_sms_code"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_auth_code_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@null"
            app:srcCompat="@mipmap/ic_signup_sms" />

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="#dededf" />

        <EditText
            android:id="@+id/et_register_auth_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_sms_auth_code"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#c9c9c9"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/tv_register_sms_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:alpha="0.4"
            android:background="@drawable/register_call_sms"
            android:gravity="center_vertical"
            android:paddingLeft="6dp"
            android:paddingTop="4dp"
            android:paddingRight="6dp"
            android:paddingBottom="4dp"
            android:text="@string/register_sms_hint"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_selector_checkbox"
            android:checked="false"
            android:contentDescription="@null"
            android:textColor="#9d9d9d"
            android:textSize="@dimen/font_12"
            tools:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/lay_16"
            android:text="已阅读并同意服务条款"
            android:textColor="#FFFFFF"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 服务条款 "
            android:textColor="#ffaa66cc"
            tools:ignore="HardcodedText,RtlHardcoded" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_register_submit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/login_submit_lock"
        android:elevation="0dp"
        android:outlineProvider="none"
        android:text="@string/login_register_hint"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/font_18"
        android:translationZ="0dp"
        tools:targetApi="lollipop" />
</LinearLayout>