<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:id="@+id/login_root_container"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg2"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <include
            android:id="@+id/ly_retrieve_bar"
            layout="@layout/login_navigation_bar" />

        <LinearLayout
            android:id="@+id/ll_login_username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_username_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_username" />

            <View
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:background="#dededf" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#dededf"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_login_username_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_logon_pwd"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_pwd_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_password" />

            <View
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:background="#dededf" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#dededf"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_login_pwd_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />
        </LinearLayout>

        <Button
            android:id="@+id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_submit"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/login_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_register"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login_register_hint"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_18"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_selector_checkbox"
                android:checked="true"
                android:contentDescription="@null"
                android:textColor="#9d9d9d"
                android:textSize="@dimen/font_12"
                tools:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hold_hint"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </LinearLayout>
    <!--
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/ll_login_layer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:background="#80000000" />

            <LinearLayout
                android:id="@+id/ll_login_pull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_login_thirdpart"
                android:orientation="vertical"
                android:translationY="80dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/lay_12"
                    android:gravity="center"
                    android:text="@string/login_other_hint"
                    android:textColor="#cacaca"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/ll_login_options"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/lay_16"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/ib_login_weibo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_material"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_login_3party_weibo" />

                    <ImageView
                        android:id="@+id/ib_login_wx"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_material"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_login_3party_wechat" />

                    <ImageView
                        android:id="@+id/ib_login_qq"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_material"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_login_3party_qq" />

                    <ImageView
                        android:id="@+id/ib_login_csdn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/ic_material"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:scaleType="centerInside"
                        android:src="@mipmap/ic_login_3party_csdn" />
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>
        -->
</FrameLayout>
